--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,11 +26,11 @@
       recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </div>
     <div>
-      <img class="img-fluid" src="assets/pizza.jpeg" />
+      <img class="img-fluid" src="{%static 'assets/pizza.jpeg' %}" />
     </div>
   </div>
   <div id="pizza-two">
-    <img class="img-fluid" src="assets/pizza-2.jpeg" />
+    <img class="img-fluid" src="{%static 'assets/pizza-2.jpeg' %}" />
     <p>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
       standard
