--- a/mysite/polls/templates/products.html
+++ b/mysite/polls/templates/products.html
@@ -19,6 +19,9 @@
       <td>
         {{product.price}}
       </td>
+      <td>
+        <img src="{{product.picture}}" />
+      </td>
     </tr>
     {% endfor %}
   </table>
