--- a/mysite/polls/templates/products.html
+++ b/mysite/polls/templates/products.html
@@ -20,7 +20,7 @@
         {{product.price}}
       </td>
       <td>
-        <img src="{{product.picture}}" />
+        {{product.picture}}
       </td>
     </tr>
     {% endfor %}
