--- a/mysite/polls/templates/views/index.html
+++ b/mysite/polls/templates/views/index.html
@@ -1,18 +1,19 @@
 {%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pizzaria do DCC</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 
+{% include 'components/navbar.html' %}
+
 <body>
-  <div class="grid text-center" style="--bs-columns: 3;">
+  <div>
     <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
       the industry's
       standard
@@ -26,11 +27,11 @@
       recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </div>
     <div>
-      <img class="img-fluid" src="{%static 'assets/pizza.jpeg' %}" />
+      <img src="{%static 'assets/pizza.jpeg' %}" />
     </div>
   </div>
   <div id="pizza-two">
-    <img class="img-fluid" src="{%static 'assets/pizza-2.jpeg' %}" />
+    <img src="{%static 'assets/pizza-2.jpeg' %}" />
     <p>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
       standard
@@ -44,9 +45,6 @@
       recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
