--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -1,11 +1,20 @@
+{%load static%}
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pizzaria do DCC - Login</title>
+</head>
+
 
 <body>
 
   <h2>Login</h2>
   {% if error %}
-  <p>error</p>
+  <p class="error"><b>{{error}}</b></p>
   {% endif %}
   <form action="/polls/login" method="post">
     {% csrf_token %}
@@ -13,7 +22,7 @@
     <input type="text" id="username" name="username"><br>
     <label for="password">Password:</label><br>
     <input type="text" id="password" name="password"><br><br>
-    <input type="submit" value="Submit">
+    <input id="submit" type="submit" value="Submit">
   </form>
 
 </body>
