--- a/mysite/polls/templates/components/bootstrap.html
+++ b/mysite/polls/templates/components/bootstrap.html
@@ -5,7 +5,7 @@
 
 <head>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'icons/' %}">
+  <link rel="stylesheet" href="{% static 'icons/font/bootstrap-icons.min.css' %}">
 
 </head>
 
