--- a/mysite/polls/templates/components/bootstrap.html
+++ b/mysite/polls/templates/components/bootstrap.html
@@ -6,7 +6,13 @@
 <head>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'icons/font/bootstrap-icons.min.css' %}">
-
+  <style>
+    html,
+    body {
+      height: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
