--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,29 +6,81 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products</title>
+  <title>Pizzas</title>
 </head>
 
-<body>
-  {% if products %}
-  <table>
-    {% for product in products %}
-    <tr>
-      <td>
-        {{product.name}}
-      </td>
-      <td>
-        {{product.price}}
-      </td>
-      <td>
-        {{product.picture}}
-      </td>
-    </tr>
+{% include 'components/navbar.html' %}
+
+<section class="py-5 text-center container">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">Pizzas 🍕</h1>
+      <p class="lead" style="color: cyan;">
+        Navegue por nossa deliciosa seleção de pizzas e descubra uma variedade de
+        sabores tentadores em diferentes categorias.
+      </p>
+    </div>
+  </div>
+</section>
+
+<body class="bg-dark text-light">
+
+  {% if categories %}
+  {% with query_string="category" class_of_li="nav-item" active="nav-link active" inactive="nav-link" %}
+  <ul class="nav nav-tabs justify-content-center" data-bs-theme="dark">
+    <li class="{{class_of_li}}">
+      {% if not searched_category %}
+      <a class="{{active}}" href="{% url 'produtos' %}">Todas</a>
+      {% else %}
+      <a class="{{inactive}}" href="{% url 'produtos' %}">Todas</a>
+      {% endif %}
+    </li>
+    {% for category in categories %}
+    <li class="{{class_of_li}}">
+      {% if category == searched_category %}
+      <a class="{{active}}" href="{% url 'produtos' %}?{{query_string}}={{category.name}}">{{category.name}}</a>
+      {% else %}
+      <a class="{{inactive}}" href="{% url 'produtos' %}?{{query_string}}={{category.name}}">{{category.name}}</a>
+      {% endif %}
+    </li>
     {% endfor %}
-  </table>
-  {% else %}
-  <p>Nenhum produto disponível</p>
+  </ul>
+  {% endwith %}
   {% endif %}
+
+
+  {% if products %}
+
+  <div class="album py-5" data-bs-theme="dark">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        {% for product in products %}
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="/polls{{product.picture.url}}">
+            <div class="card-body">
+              <p class="card-text">{{product.name}}</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Descrição</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Adicionar ao carrinho <i
+                      class="bi bi-cart4"></i></button>
+                </div>
+                <small class="text-body-secondary">R$ {{product.price}}</small>
+              </div>
+              <p class="card-text" style="display: none">{{product.description}}</p>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+  </div>
+  {% else %}
+  {% endif %}
+
 </body>
+
 
 </html>
