--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -15,7 +15,7 @@
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
       <h1 class="fw-light">Pizzas 🍕</h1>
-      <p class="lead" style="color: cyan;">
+      <p class="lead" style="color: orange;">
         Navegue por nossa deliciosa seleção de pizzas e descubra uma variedade de
         sabores tentadores em diferentes categorias.
       </p>
