--- a/mysite/polls/templates/components/navbar.html
+++ b/mysite/polls/templates/components/navbar.html
@@ -24,20 +24,32 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'produtos' %}">Pizzas</a>
+            <a class="nav-link" href="{% url 'produtos' %}">Pizzas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'index' %}">Pedidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">
+            <a class="nav-link" href="{% url 'cart' %}">
               <span>Carrinho</span>
               <i class="bi bi-cart4"></i>
             </a>
           </li>
           <li class="nav-item">
+            <div class="dropdown">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <i class="bi bi-person-circle"></i>
+              </a>
+
+
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </div>
             <a class="nav-link" href="{% url 'index' %}">
-              <i class="bi bi-person-circle"></i>
             </a>
           </li>
         </ul>
