--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -7,23 +7,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pizzaria do DCC - Login</title>
+  <style>
+  </style>
 </head>
+{% include 'components/bootstrap.html' %}
 
+<body class="bg-dark text-light">
 
-<body>
-
-  <h2>Login</h2>
-  {% if error %}
-  <p class="error"><b>{{error}}</b></p>
-  {% endif %}
-  <form action="/polls/login" method="post">
-    {% csrf_token %}
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br>
-    <label for="password">Password:</label><br>
-    <input type="text" id="password" name="password"><br><br>
-    <input id="submit" type="submit" value="Submit">
-  </form>
+  <div>
+    <h2>Login</h2>
+    {% if error %}
+    <p class="error"><b>{{error}}</b></p>
+    {% endif %}
+    <div>
+      <form action="/polls/login" method="post">
+        {% csrf_token %}
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username"><br>
+        <label for="password">Password:</label><br>
+        <input type="text" id="password" name="password"><br><br>
+        <input id="submit" type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
 
 </body>
 
