--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -24,7 +24,6 @@
 </section>
 
 <body class="bg-dark text-light">
-
   {% if categories %}
   {% with query_string="category" class_of_li="nav-item" active="nav-link active" inactive="nav-link" %}
   <ul class="nav nav-tabs justify-content-center" data-bs-theme="dark">
@@ -37,7 +36,7 @@
     </li>
     {% for category in categories %}
     <li class="{{class_of_li}}">
-      {% if category == searched_category %}
+      {% if category.name == searched_category %}
       <a class="{{active}}" href="{% url 'produtos' %}?{{query_string}}={{category.name}}">{{category.name}}</a>
       {% else %}
       <a class="{{inactive}}" href="{% url 'produtos' %}?{{query_string}}={{category.name}}">{{category.name}}</a>
@@ -78,6 +77,9 @@
 
   </div>
   {% else %}
+  <div style="margin-top: 20px;">
+    <h2 style="color: orange;">Estamos sem produtos nesta categoria no momento! 😭</h2>
+  </div>
   {% endif %}
 
 </body>
