--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -56,7 +56,7 @@
         {% for product in products %}
         <div class="col">
           <div class="card shadow-sm">
-            <img src="/polls{{product.picture.url}}">
+            <img src="{{product.picture.url}}">
             <div class="card-body">
               <p class="card-text">{{product.name}}</p>
               <div class="d-flex justify-content-between align-items-center">
