--- a/mysite/polls/templates/components/navbar.html
+++ b/mysite/polls/templates/components/navbar.html
@@ -36,21 +36,18 @@
             </a>
           </li>
           <li class="nav-item">
-            <div class="dropdown">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <i class="bi bi-person-circle"></i>
-              </a>
 
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </div>
-            <a class="nav-link" href="{% url 'index' %}">
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'logout' %}">
+              <span>Logout</span>
+              <i class="bi bi-person-circle"></i>
             </a>
+            {% else %}
+            <a class="nav-link" href="{% url 'login' %}">
+              <span>Login</span>
+              <i class="bi bi-person-circle"></i>
+            </a>
+            {% endif %}
           </li>
         </ul>
       </div>
