--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -1,36 +1,38 @@
 {%load static%}
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizzaria do DCC - Login</title>
-  <style>
-  </style>
-</head>
 {% include 'components/bootstrap.html' %}
 
-<body class="bg-dark text-light">
+<!DOCTYPE html>
+<!-- saved from url=(0049)https://getbootstrap.com/docs/5.3/examples/cover/ -->
+<html lang="en" class="h-100" data-bs-theme="dark">
 
-  <div>
-    <h2>Login</h2>
-    {% if error %}
-    <p class="error"><b>{{error}}</b></p>
-    {% endif %}
-    <div>
-      <form action="/polls/login" method="post">
-        {% csrf_token %}
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password"><br><br>
-        <input id="submit" type="submit" value="Submit">
-      </form>
-    </div>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login</title>
+</head>
+
+<body class="d-flex h-100 text-center text-bg-dark" cz-shortcut-listen="true">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <main class="px-3">
+      <div>
+        <h2>Login</h2>
+        {% if error %}
+        <p class="error"><b>{{error}}</b></p>
+        {% endif %}
+        <div>
+          <form action="/login" method="post">
+            {% csrf_token %}
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username"><br>
+            <label for="password">Password:</label><br>
+            <input type="text" id="password" name="password"><br><br>
+            <input id="submit" type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
+    </main>
+
   </div>
-
 </body>
 
 </html>
