--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -59,9 +59,9 @@
             <img src="{{product.picture.url}}">
             <div class="card-body">
               <p class="card-text">{{product.name}}</p>
+              <p class="card-description">{{product.description}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Descrição</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Adicionar ao carrinho <i
                       class="bi bi-cart4"></i></button>
                 </div>
