--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -28,6 +28,7 @@
             <input type="text" id="password" name="password"><br><br>
             <input id="submit" type="submit" value="Submit">
           </form>
+          <p>Ainda não tem conta? <a href="/polls/client">Registre-se</a></p>
         </div>
       </div>
     </main>
