--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -26,7 +26,7 @@
             <input type="text" id="username" name="username"><br>
             <label for="password">Password:</label><br>
             <input type="text" id="password" name="password"><br><br>
-            <input id="submit" type="submit" value="Submit">
+            <input id="submit" type="submit" value="Login">
           </form>
           <br>
           <p>Ainda não tem conta? <a href="{% url 'client' %}">Registre-se</a></p>
