--- a/mysite/polls/templates/views/client.html
+++ b/mysite/polls/templates/views/client.html
@@ -19,7 +19,7 @@
   <form action="/cliente" method="post">
     {% csrf_token %}
     <label for="nome">Nome:</label><br>
-    <input type="text" id="nome" name="nome"><br>
+    <input type="text" id="nome" name="nome"><br><br>
     <label for="sobrenome">Sobrenome:</label><br>
     <input type="text" id="sobrenome" name="sobrenome"><br><br>
     <label for="email">Email:</label><br>
@@ -28,8 +28,6 @@
     <input type="password" id="senha" name="senha"><br><br>
     <input id="submit" type="submit" value="Submit">
   </form>
-  <br>
-  <button type="submit" class="btn btn-primary">Cadastre-se</button>
 
 </body>
 
