--- a/mysite/polls/templates/views/cart.html
+++ b/mysite/polls/templates/views/cart.html
@@ -46,11 +46,11 @@
         <td>{{ item.product.name }}</td>
         <td>R$ {{ item.product.price }}</td>
         <td class="flex">
-          <a class="link" href=""><i class="bi bi-patch-minus"></i></a>
+          <a class="link" id="decrease-qtd" href=""><i class="bi bi-patch-minus"></i></a>
           <span>
             {{ item.quantity }}
           </span>
-          <a class="link" href=""><i class="bi bi-patch-plus"></i></a>
+          <a class="link" id="increase-qtd" href=""><i class="bi bi-patch-plus"></i></a>
         </td>
         <td>R$ {{item.total_price}}</td>
       </tr>
@@ -66,4 +66,6 @@
   {% else %}
   <h2>🛒 Carrinho Vazio!</h2>
   {% endif %}
+  <span style="display: none">{% csrf_token %}</span>
+  <script src="{% static 'js/cart.js' %}"></script>
 </body>
