--- a/mysite/polls/templates/views/login.html
+++ b/mysite/polls/templates/views/login.html
@@ -25,7 +25,7 @@
             <label for="username">Username:</label><br>
             <input type="text" id="username" name="username"><br>
             <label for="password">Password:</label><br>
-            <input type="text" id="password" name="password"><br><br>
+            <input type="password" id="password" name="password"><br><br>
             <input id="submit" type="submit" value="Login">
           </form>
           <br>
