--- a/mysite/polls/templates/views/products.html
+++ b/mysite/polls/templates/views/products.html
@@ -7,6 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pizzas</title>
+  <style>
+    .modal-content {
+      background-color: #212529;
+      color: #fff;
+    }
+
+    .modal-header {
+      background-color: #212529;
+      border-bottom: 1px solid #212529;
+    }
+
+    .modal-body {
+      background-color: #212529;
+
+    }
+
+    .modal-footer {
+      background-color: #212529 !important;
+      border-top: 1px solid #000;
+    }
+  </style>
 </head>
 
 {% include 'components/navbar.html' %}
@@ -62,8 +83,11 @@
               <p class="card-description">{{product.description}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Adicionar ao carrinho <i
-                      class="bi bi-cart4"></i></button>
+                  <button type="button" id="{{product.id}}" class="btn btn-sm btn-outline-secondary"
+                    onclick="addToCart('{{product.id}}','{{product.name}}')">
+                    Adicionar ao
+                    carrinho <i class="bi bi-cart4"></i>
+                  </button>
                 </div>
                 <small class="text-body-secondary">R$ {{product.price}}</small>
               </div>
@@ -81,8 +105,45 @@
     <h2 style="color: orange;">Estamos sem produtos nesta categoria no momento! 😭</h2>
   </div>
   {% endif %}
-
+  <script src="{% static 'js/products.js' %}"></script>
+  <span id="csrf_token" style="display: none">{% csrf_token %}</span>
 </body>
 
+<div class="modal" id="modal_success">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Conteúdo do modal -->
+      <div class="modal-header">
+        <h5 class="modal-title">🍕 Pizza adicionada com sucesso!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Conteúdo do corpo do modal -->
+        <p>Sua pizza foi adicionada ao carrinho com sucesso! 🛒 </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal" id="modal_error">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Conteúdo do modal -->
+      <div class="modal-header">
+        <h5 class="modal-title">❌ Erro ao adicionar pizza</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Conteúdo do corpo do modal -->
+        <p>Não foi possível adicionar a pizza!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
