add login required and table

--- a/mysite/polls/templates/components/navbar.html
+++ b/mysite/polls/templates/components/navbar.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="{% url 'produtos' %}">Pizzas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Pedidos</a>
+            <a class="nav-link" href="{% url 'orders' %}">Pedidos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'cart' %}">
