--- a/mysite/polls/templates/views/client.html
+++ b/mysite/polls/templates/views/client.html
@@ -6,31 +6,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizzaria do DCC - Login</title>
+  <title>Pizzaria do DCC - Cliente</title>
 </head>
 
 
-<body>
-
-  <h2>Login</h2>
-  {% if error %}
-  <p class="error"><b>{{error}}</b></p>
-  {% endif %}
-  <form action="/cliente" method="post">
-    {% csrf_token %}
-    <label for="first_name">Nome:</label><br>
-    <input type="text" id="first_name" name="first_name"><br><br>
-    <label for="last_name">Sobrenome:</label><br>
-    <input type="text" id="last_name" name="last_name"><br><br>
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="password">Senha:</label><br>
-    <input type="password" id="password" name="password"><br><br>
-    <input id="submit" type="submit" value="Submit">
-  </form>
-
+<body class="d-flex h-100 text-center text-bg-dark" cz-shortcut-listen="true">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <main class="px-3">
+      <div>
+        <h2>Client</h2>
+        {% if error %}
+        <p class="error"><b>{{error}}</b></p>
+        {% endif %}
+        <form action="/cliente" method="post">
+          {% csrf_token %}
+          <label for="first_name">Nome:</label><br>
+          <input type="text" id="first_name" name="first_name"><br><br>
+          <label for="last_name">Sobrenome:</label><br>
+          <input type="text" id="last_name" name="last_name"><br><br>
+          <label for="username">Username:</label><br>
+          <input type="text" id="username" name="username"><br><br>
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email"><br><br>
+          <label for="password">Senha:</label><br>
+          <input type="password" id="password" name="password"><br><br>
+          <input id="submit" type="submit" value="Submit">
+        </form>     
+      </div>
+    </main>
+  </div>
 </body>
 
 </html>
