--- a/mysite/polls/templates/views/client.html
+++ b/mysite/polls/templates/views/client.html
@@ -1,7 +1,10 @@
 {%load static%}
-<!DOCTYPE html>
-<html lang="pt-br">
 {% include 'components/bootstrap.html' %}
+
+<!DOCTYPE html>
+
+<html lang="en" class="h-100" data-bs-theme="dark">
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +33,7 @@
           <input type="email" id="email" name="email"><br><br>
           <label for="password">Senha:</label><br>
           <input type="password" id="password" name="password"><br><br>
-          <input id="submit" type="submit" value="Submit">
+          <input id="submit" type="submit" value="Registre-se">
         </form>     
       </div>
     </main>
