--- a/mysite/polls/templates/views/client.html
+++ b/mysite/polls/templates/views/client.html
@@ -2,14 +2,12 @@
 {% include 'components/bootstrap.html' %}
 
 <!DOCTYPE html>
-
 <html lang="en" class="h-100" data-bs-theme="dark">
   
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizzaria do DCC - Cliente</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cliente</title>
 </head>
 
 
@@ -17,7 +15,7 @@
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <main class="px-3">
       <div>
-        <h2>Client</h2>
+        <h2>Cadastro</h2>
         {% if error %}
         <p class="error"><b>{{error}}</b></p>
         {% endif %}
