--- a/mysite/polls/templates/components/bootstrap.html
+++ b/mysite/polls/templates/components/bootstrap.html
@@ -6,6 +6,7 @@
 <head>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'icons/font/bootstrap-icons.min.css' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static 'icon.png' %}">
   <style>
     html,
     body {
