--- a/mysite/polls/templates/views/index.html
+++ b/mysite/polls/templates/views/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🍕 Pizzaria do DCC</title>
+  <title>Pizzaria do DCC</title>
 </head>
 
 {% include 'components/navbar.html' %}
