--- a/mysite/polls/templates/views/order_created.html
+++ b/mysite/polls/templates/views/order_created.html
@@ -31,8 +31,8 @@
       <h1 class="col-12">🔖 Pedido criado com sucesso!</h1>
       <div class="col-4">
 
-        <h2 class="col-12 text">Número do pedido: {{order.id}}</h2>
-        <h3 class="col-12 text">Status do pedido: {{order.status_display}}</h3>
+        <h2 class="col-12 text">Número: {{order.id}}</h2>
+        <h3 class="col-12 text">Status: {{order.status}}</h3>
         <div class="col-12 text">
           {% for item in items %}
           <div>{{item.quantity}}x {{item.product.name}} (R$ {{item.product.price}}) = R$ {{item.total_price}}</div>
