💄 add R$ on total price

--- a/pizzaria/templates/views/orders.html
+++ b/pizzaria/templates/views/orders.html
@@ -43,7 +43,7 @@
           <p>{{item}}</p>
           {% endfor %}
         </td>
-        <td>{{order.total_price}}</td>
+        <td>R$ {{order.total_price}}</td>
         <td>{{ order.datetime }}</td>
         <td>{{ order.status }}</td>
       </tr>
