--- a/pizzaria/templates/components/navbar.html
+++ b/pizzaria/templates/components/navbar.html
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li class="nav-item">
-
+            {% if user %}
             {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'logout' %}">
               <span>Logout</span>
@@ -47,6 +47,7 @@
               <span>Login</span>
               <i class="bi bi-person-circle"></i>
             </a>
+            {% endif %}
             {% endif %}
           </li>
         </ul>
