--- a/app/pizzaria/templates/views/products.html
+++ b/app/pizzaria/templates/views/products.html
@@ -40,7 +40,7 @@
       max-width: auto;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
-      max-height: 200px;
+      height: 200px;
     }
   </style>
 </head>
